[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webexpythonsdk_async"
version = "0.1.0"
authors = [
    { name="Rainux He", email="rainuxhe@outlook.com" }
]
description = "An async Webex SDK for Python using httpx and JWT."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries"
]

dependencies = [
    "httpx>=0.23.0",
    "pyjwt>=2.4.0"
]

[project.urls]
Homepage = "https://github.com/rainuxhe/WebexPythonSDK-async" 
Bug Tracker = "https://github.com/rainuxhe/WebexPythonSDK-async/issues" 
Documentation = "https://github.com/rainuxhe/WebexPythonSDK-async#readme" 
Source = "https://github.com/rainuxhe/WebexPythonSDK-async" 