[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webexpythonsdk_async"
version = "0.1.1"
authors = [
    { name="Rainux He", email="rainuxhe@outlook.com" }
]
description = "An async Webex SDK for Python using httpx and JWT."
readme = {file = "README.md", content-type = "text/markdown"}
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries"
]

dependencies = [
    "httpx>=0.23.0",
    "pyjwt>=2.4.0"
]

[project.urls]
Homepage = "https://github.com/rainuxhe/WebexPythonSDK-async" 
Documentation = "https://github.com/rainuxhe/WebexPythonSDK-async#readme" 
Repository = "https://github.com/rainuxhe/WebexPythonSDK-async.git" 